Update style meta

--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 /*
-Theme Name:     raekjaer
-Theme URI:      https://github.com/craedk/raekjaer
+Theme Name:     Neve Child Template
+Theme URI:      https://github.com/craedk/neve-child
 Template: neve
 Author:         Crae
 Author URI:     https://crae.dk
-Description:    raekjaer is a Neve Child Theme
+Description:    A template for Neve Child Themes
 Version:        1.0.0
 License:        GNU General Public License v2 or later
 License URI:    http://www.gnu.org/licenses/gpl-2.0.html
